# ams

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  celery_app.py  entrypoint.sh  pyproject.toml  requirements.txt
accounts/: admin.py  urls.py  views.py
accounts/models/: users.py
accounts/serializers/: auth.py  nested.py  user.py
ams_front/: index.html  vite.config.js
ams_front/src/: main.js
api/: test_views.py  urls.py
archive/: admin.py  apps.py  models.py  serializers.py  statuses.py  urls.py  views.py
archive/serializers/: archive_box.py  dossiers.py  nested.py  registries.py  search.py
archive/views/: archive_box.py  dossiers.py  mixins.py  registries.py  (+1 more)
bank_clients/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
common/: exeptions.py  filters.py  pagination.py  permissions.py  statuses.py  validators.py
common_archive/: admin.py  apps.py  models.py  serializers.py  validators.py
config/: settings.py  urls.py
docker_compose/: app.yaml  back.yaml  front.yaml  storages.yaml  workers.yaml
dossier_requests/: admin.py  apps.py  models.py  permissions.py  urls.py
logistic/: serializers.py  services.py  urls.py  views.py
logistics/: permissions.py  urls.py
nginx/: nginx.conf
orders/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
registration/: permissions.py  serializers.py  services.py  urls.py  views.py
selection/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/: archive_box.py  dossiers.py  permissions.py  validators.py
templates/: test.html
(+55 files in other folders)
